<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginStart="0dp"
        android:elevation="8dp"
        android:background="@color/design_default_color_background"
        android:text="@string/top_bar"
        android:textSize="40sp"
        android:gravity="center">
    </TextView>

    <TextView
        android:id="@+id/bill_text"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/bill"
        android:textSize="35sp">
    </TextView>

    <EditText
        android:id="@+id/bill_enter"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/bill"
        android:inputType="number"
        android:autofillHints="name"
        android:textSize="35sp">
    </EditText>

    <TextView
        android:id="@+id/tip_text"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_text"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/tip"
        android:textSize="35sp">
    </TextView>

    <EditText
        android:id="@+id/tip_enter"
        android:layout_width="150dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bill_enter"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/tip"
        android:inputType="number"
        android:autofillHints="name"
        android:textSize="35sp">
    </EditText>

    <Button
        android:id="@+id/ten_percent"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tip_enter"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/ten_percent"
        android:textSize="20sp">
    </Button>

    <Button
        android:id="@+id/fifteen_percent"
        android:layout_width="100dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tip_enter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/fifteen_percent"
        android:textSize="20sp">
    </Button>

    <EditText
        android:id="@+id/tip_custom"
        android:layout_width="100dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_enter"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:hint="@string/other"
        android:inputType="number"
        android:autofillHints="name"
        android:textSize="25sp">
    </EditText>





</androidx.constraintlayout.widget.ConstraintLayout>